# CppGameboyEmulator

./: .gitignore  CMakeLists.txt  README.md  run.sh
emu_core/: CMakeLists.txt  deploy.sh  test.sh
emu_core/src/: CMakeLists.txt
emu_core/src/audio/: apu.cpp  apu.hpp  noise_channel.cpp  speaker.cpp  square_channel.hpp  wave_channel.cpp
emu_core/src/core/: bus.hpp  cart.cpp  cart.hpp  cpu.cpp  cpu.hpp  interrupts.hpp  registers.cpp
emu_core/src/graphics/: ppu.cpp  ppu.hpp  screen.cpp  screen.hpp
emu_core/src/joypad/: joypad.cpp  joypad.hpp
emu_core/src/log/: logger.cpp  logger.hpp
emu_core/src/runtime/: main.cpp
emu_core/test/: CMakeLists.txt
emu_launcher/: index.html  package.json  pnpm-lock.yaml
emu_launcher/src/: App.vue
emu_launcher/src-tauri/: Cargo.toml  tauri.conf.json
emu_launcher/src-tauri/binaries/: GameBoyCpp-aarch64-apple-darwin
emu_launcher/src-tauri/capabilities/: default.json
emu_launcher/src-tauri/icons/: icon.icns
emu_launcher/src-tauri/src/: lib.rs
src/: CMakeLists.txt
src/audio/: apu.cpp  apu.hpp  channel1.cpp  channel1.hpp  channel2.cpp  channel2.hpp  noise_channel.cpp  noise_channel.hpp  speaker.cpp  speaker.hpp  square_channel.cpp  square_channel.hpp  wave_channel.cpp  wave_channel.hpp
src/core/: bus.cpp  bus.hpp  cart.cpp  cart.hpp  cpu.cpp  cpu.hpp  ppu.cpp  ppu.hpp  registers.cpp  registers.hpp  timer.cpp  timer.hpp
src/graphic/: screen.hpp
src/graphics/: dbg_window.cpp  dbg_window.hpp  ppu.cpp  ppu.hpp  screen.cpp  screen.hpp
src/io/: timer.cpp  timer.hpp
src/joypad/: joypad.cpp
src/log/: logger.cpp  logger.hpp
src/runtime/: emulator.cpp  emulator.hpp  main.cpp
test/: CMakeLists.txt
test/core/: cart_test.cpp  cpu_test.cpp
